--- a/glvnsjc/webapp/index1.xhtml
+++ b/glvnsjc/webapp/index1.xhtml
@@ -3,20 +3,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:ui="http://java.sun.com/jsf/facelets"
-  xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:f="http://java.sun.com/jsf/core" >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+  xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+  xmlns:tr="http://myfaces.apache.org/trinidad">
 
 <head>
 <title>Insert title here</title>
 </head>
-  <body>
-    <f:view>
+<body>
+<f:view>
   Hello XHTML
+<tr:panelGroupLayout layout="vertical">
+      <h:outputText value="Hello outputText" />
+      <tr:outputText value="AFFieldText" />
+</tr:panelGroupLayout>
 
-  <h:outputText value="Hello outputText" />
-    </f:view>
+</f:view>
 </body>
 
 </html>
