--- a/trunk/glvnsjc/webapp/index1.xhtml
+++ b/trunk/glvnsjc/webapp/index1.xhtml
@@ -15,7 +15,7 @@
   Hello XHTML
 <tr:panelGroupLayout layout="vertical">
       <h:outputText value="Hello outputText" />
-      <tr:outputText value="AFFieldText" />
+      <tr:outputText value="${testView.testString}" />
 </tr:panelGroupLayout>
 
 </f:view>
