--- a/trunk/glvnsjc/webapp/admin/index.xhtml
+++ b/trunk/glvnsjc/webapp/admin/index.xhtml
@@ -5,7 +5,7 @@
   xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
   xmlns:tr="http://myfaces.apache.org/trinidad">
 
-<ui:composition template="/WEB-INF/layout/layout1.xhtml">
+<ui:composition template="/WEB-INF/layout/layout.xhtml">
 
   <ui:param name="pageid" value="page1" />
 
