--- a/trunk/glvnsjc/webapp/index.xhtml
+++ b/trunk/glvnsjc/webapp/index.xhtml
@@ -23,7 +23,7 @@
 
 
     <tr:panelGroupLayout layout="vertical">
-      <h:outputText value="Hello outputText" />
+      <tr:outputText value="Hello outputText" />
       <tr:outputText value="${testView.testString}" />
     </tr:panelGroupLayout>
 
