--- a/trunk/glvnsjc/webapp/index.xhtml
+++ b/trunk/glvnsjc/webapp/index.xhtml
@@ -3,7 +3,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<tr:document xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
   xmlns:tr="http://myfaces.apache.org/trinidad"
   xmlns:a4j="http://richfaces.org/a4j"
@@ -77,7 +77,7 @@
 
   </ui:composition>
 
-</tr:document>
+</html>
 
 
 
