--- a/trunk/glvnsjc/webapp/index.xhtml
+++ b/trunk/glvnsjc/webapp/index.xhtml
@@ -10,7 +10,7 @@
   xmlns:rich="http://richfaces.org/rich"
   >
 
-  <ui:composition template="/WEB-INF/layout/layout.xhtml">
+  <ui:composition template="/templates/main.xhtml">
 
     <ui:param name="pageid" value="page1" />
 
