--- a/glvnsjc/webapp/admin/schoolAdmins.xhtml
+++ b/glvnsjc/webapp/admin/schoolAdmins.xhtml
@@ -7,34 +7,46 @@
 
 <ui:composition template="/templates/main.xhtml">
 
-  <style>
-.center {
-	text-align: center;
-}
-</style>
-
   <ui:define name="content">
 
     <h:form>
-    
-      <rich:dataTable value="#{userManager.users}" var="schoolAdmin" width="900px" columnClasses="center" rows="25">
-      
+
+      <rich:dataTable value="#{userManager.users}" var="admin" width="900px" columnClasses="center" rows="25">
+
         <f:facet name="header">
           <h:outputText value="School System Administrators" />
         </f:facet>
 
-        <rich:column sortBy="#{schoolAmdin.name}">
+        <rich:column width="7">
+          <f:facet name="header">
+            <h:outputText value="Edit" />
+          </f:facet>
+          <h:commandLink action="${logout.logout}" immediate="true">
+            <h:graphicImage id="edit" url="/images/edit.gif" />
+          </h:commandLink>
+        </rich:column>
+
+        <rich:column width="7">
+          <f:facet name="header">
+            <h:outputText value="Del" />
+          </f:facet>
+          <h:commandLink action="${logout.logout}" immediate="true">
+            <h:graphicImage id="del" url="/images/delete.gif" />
+          </h:commandLink>
+        </rich:column>
+
+        <rich:column sortBy="#{admin.name}">
           <f:facet name="header">
             <h:outputText value="Name" />
           </f:facet>
-          <h:outputText value="#{schoolAdmin.name}" />
+          <h:outputText value="#{admin.name}" />
         </rich:column>
 
-        <rich:column sortBy="#{schoolAdmin.description}">
+        <rich:column sortBy="#{admin.description}">
           <f:facet name="header">
             <h:outputText value="Description" />
           </f:facet>
-          <h:outputText value="#{schoolAdmin.description}" />
+          <h:outputText value="#{admin.description}" />
         </rich:column>
 
       </rich:dataTable>
