--- a/glvnsjc/webapp/admin/mainSchools.xhtml
+++ b/glvnsjc/webapp/admin/mainSchools.xhtml
@@ -11,7 +11,7 @@
 
     <h:form>
 
-      <rich:dataTable value="#{schoolManager.mainSchools}" var="school" width="900px" columnClasses="center" rows="25">
+      <rich:dataTable value="#{mainSchoolList.mainSchools}" var="school" width="900px" columnClasses="center" rows="25">
 
         <f:facet name="header">
           <h:outputText value="Main Schools" />
@@ -21,8 +21,9 @@
           <f:facet name="header">
             <h:outputText value="Edit" />
           </f:facet>
-          <h:commandLink action="${logout.logout}" immediate="true">
+          <h:commandLink action="${mainSchoolList.prepareEdit}" immediate="true">
             <h:graphicImage id="edit" url="/images/edit.gif" />
+            <f:setPropertyActionListener target="${mainSchoolList.selectedSchoolId}" value="#{school.id}" />
           </h:commandLink>
         </rich:column>
 
@@ -30,8 +31,9 @@
           <f:facet name="header">
             <h:outputText value="Del" />
           </f:facet>
-          <h:commandLink action="${logout.logout}" immediate="true">
+          <h:commandLink action="${mainSchoolList.prepareDelete}" immediate="true">
             <h:graphicImage id="del" url="/images/delete.gif" />
+            <f:setPropertyActionListener target="${mainSchoolList.selectedSchoolId}" value="#{school.id}" />
           </h:commandLink>
         </rich:column>
 
