--- a/trunk/glvnsjc/webapp/admin/schoolAdmins.xhtml
+++ b/trunk/glvnsjc/webapp/admin/schoolAdmins.xhtml
@@ -21,7 +21,7 @@
           <f:facet name="header">
             <h:outputText value="Edit" />
           </f:facet>
-          <h:commandLink action="${logout.logout}" immediate="true">
+          <h:commandLink  immediate="true">
             <h:graphicImage id="edit" url="/images/edit.gif" />
           </h:commandLink>
         </rich:column>
@@ -30,7 +30,7 @@
           <f:facet name="header">
             <h:outputText value="Del" />
           </f:facet>
-          <h:commandLink action="${logout.logout}" immediate="true">
+          <h:commandLink  immediate="true">
             <h:graphicImage id="del" url="/images/delete.gif" />
           </h:commandLink>
         </rich:column>
