--- a/trunk/glvnsjc/webapp/admin/mainSchools.xhtml
+++ b/trunk/glvnsjc/webapp/admin/mainSchools.xhtml
@@ -22,7 +22,7 @@
             <h:outputText value="Edit" />
           </f:facet>
           <h:commandLink action="${mainSchoolList.prepareEdit}" immediate="true">
-            <h:graphicImage id="edit" url="/images/edit.gif" />
+            <h:graphicImage id="edit" url="/images/edit.gif" border="0"/>
             <f:setPropertyActionListener target="${mainSchoolList.selectedSchool.id}" value="#{school.id}" />
           </h:commandLink>
         </rich:column>
@@ -32,7 +32,7 @@
             <h:outputText value="Del" />
           </f:facet>
           <h:commandLink action="${mainSchoolList.prepareDelete}" immediate="true">
-            <h:graphicImage id="del" url="/images/delete.gif" />
+            <h:graphicImage id="del" url="/images/delete.gif" border="0"/>
             <f:setPropertyActionListener target="${mainSchoolList.selectedSchool.id}" value="#{school.id}" />
           </h:commandLink>
         </rich:column>
