--- a/trunk/shamrock-web/webapp/admin/mainSchools.xhtml
+++ b/trunk/shamrock-web/webapp/admin/mainSchools.xhtml
@@ -56,7 +56,10 @@
 
       </rich:dataTable>
 
-      <a4j:commandLink reRender="list" value="add" actionListener="#{mainSchoolList.prepareAdd}" immediate="true">
+      <rich:spacer width="1" height="20" />
+
+      <a4j:commandLink reRender="schoolDetail" value="add" actionListener="#{mainSchoolList.prepareAdd}"
+        immediate="true">
         <a4j:actionparam name="selectedSchoolAction" value="add" assignTo="#{mainSchoolList.selectedSchoolAction}" />
       </a4j:commandLink>
     </h:form>
@@ -70,11 +73,11 @@
             <h:inputHidden id="selectedSchoolId" value="#{mainSchoolList.selectedSchoolId}" />
             <h:inputHidden id="selectedSchoolAction" value="#{mainSchoolList.selectedSchoolAction}" />
             <tr:inputText columns="30" label="Name" value="#{mainSchoolList.selectedSchool.name}"
-              readOnly="#{mainSchoolList.readonly}" />
+              readOnly="#{mainSchoolList.readOnly}" />
             <tr:inputText columns="60" label="Description" value="#{mainSchoolList.selectedSchool.description}"
-              readOnly="#{mainSchoolList.readonly}" />
+              readOnly="#{mainSchoolList.readOnly}" />
             <a4j:commandLink reRender="list" value="#{mainSchoolList.selectedSchoolAction}"
-              actionListener="#{mainSchoolList.edit}" immediate="#{mainSchoolList.validateNeeded}" />
+              actionListener="#{mainSchoolList.processSelectedSchool}" immediate="#{mainSchoolList.readOnly}" />
           </tr:panelFormLayout>
         </tr:panelCaptionGroup>
       </h:form>
